--- a/hw2-abhimank/src/main/resources/docs/hw2-abhimank-report.tex
+++ b/hw2-abhimank/src/main/resources/docs/hw2-abhimank-report.tex
@@ -17,7 +17,7 @@ NLP issues that I took into account while designing the logical architecture
 and implementing UIMA analysis engine design.
 We have a total of 5 annotator classes: 1) TokenAnnotator, 2)NGrammAnnotator,
 3) QuestionAnnotator, 4)QuestionAnnotator, and finally 5)AnswerScoreAnnotator.
-Each class has a corresponding Analysis Engone Descriptor XML file that
+Each class has a corresponding Analysis Engine Descriptor XML file that
 defines its input output set and types used.
 
 \subsection{Class TokenAnnotator}
